--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
   ],
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prettier-check": "prettier --check .",
+    "prettier-fix": "prettier --write ."
   },
   "peerDependencies": {
     "eslint": ">= 7"
   },
   "dependencies": {
     "confusing-browser-globals": "^1.0.11",
-    "eslint": "^8.20.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0"
+  },
+  "devDependencies": {
+    "@la-ots/prettier-config": "^1.0.0-beta.1"
   }
 }
